--- a/radio_ae/radio_ae.tex
+++ b/radio_ae/radio_ae.tex
@@ -187,6 +187,7 @@ Further work:
 \item Attempt to use the ML network to perform frequency, phase and amplitude equalisation, wither with or without passing the pilots to the decoder.  Some initial results without pilots resultying in some performance degredation, however this may be acceptable if it is in the same order as the pilot based sync losses. Some pilot or unique word injection may still be required to perform coarse and fine timing estimation using classical DSP running at the sample rate.
 \item Work to improve the current classical DSP sync, e.g. a feedback loop to track out frequency offsets is worth 1 dB.
 \item Include PAPR optimisation and rate $F_s$ multipath channels in the training.
+\item A better analog compressor.
 \end{enumerate}
 
 \section{Comparison with Other Speech Waveforms}
