WIP Latex doc edits

--- a/radio_ae/radae_refs.bib
+++ b/radio_ae/radae_refs.bib
@@ -2,3 +2,7 @@
   title = {{Low SNR FreeDV Modes}},
   note = {\url{https://github.com/drowe67/misc/blob/master/freedv_low/freedv_low.pdf}}
 }
+@article{FreeDV-032,
+  title={{FreeDV-032 Radio Autoencoder Waveform Design (spreadsheet)}},
+  author={Rowe, David},
+}
