--- a/radio_ae/radio_ae.tex
+++ b/radio_ae/radio_ae.tex
@@ -149,9 +149,58 @@ BER = 0.5 \left(1-\sqrt{\frac{E_b/N_0}{E_b/N_0+1}} \right)
 
 \section{Radio Frequency Tests}
 
-Impressive results have been obtained from the symbol rate simulations of an OFDM modem.  These assumed ideal synchronisation.  We would like to verify these results using real radio signals in Over The Cable (OTC) and Over the Air (OTA) tests.  This requires building up a rate $F_s$ system, and synchronisation subsystems.  For a first pass, the choice was made to use classical DSP pilot symbol based syncronisation, although we acknowldge potential for ML based syncrohinisation in future iterations.
+Impressive results have been obtained from symbol rate simulations of an OFDM modem, which assumed ideal synchronisation.  We would like to verify these results using real radio signals in Over The Cable (OTC) and Over the Air (OTA) tests.  This requires building up a rate $F_s$ system, and synchronisation subsystems.  For a first pass, the choice was made to use classical DSP pilot symbol based synchronisation, although we acknowldge potential for ML based synchronisation in future iterations.
 
 The goal is to compare speech quality to SSB at $E_b/N_0=0dB$ (approx -3dB SNR in a 3000Hz BW), and work through any issues that prevent the system working over real radio channels.  PAPR optimisation will be ignored for the first iteration, as our initial goal is to verifiy the low $E_b/N_0$ results suggested by the symbol rate simulations.
+
+\begin{figure}[H]
+\caption{OFDM modem frame, $P$ denotes pilot symbol, $D$ payload data symbols. This example has a modem frame of $N_s=4$ symbols, and $N_c=3$ carriers.  Each symbol $D$ or $P$ is comprised of a $T_{cp}$ second Cyclic Prefix and $T_s^\prime$ symbol $D^\prime$.}
+\vspace{5mm}
+\label{fig:ofdm_frame}
+\begin{center}
+\begin{tikzpicture}[>=triangle 45,x=1.0cm,y=1.0cm]
+\draw[thick,->] (0,0) -- (6,0) node [below, align=left, text width=2cm]{Time};
+\draw[thick,->] (0,0) -- (0,5) node [left, align=right, text width=3cm]{Frequency};
+\def\xmin{1}
+\def\xminA{2}
+\def\xmax{5}
+\def\xmaxA{4}
+\def\ymin{1}
+\def\ymax{4}
+\def\ymaxA{3}
+
+\foreach \x in {\xmin,...,\xmax} {
+	\draw [very thin,gray] (\x,\ymin) -- (\x,\ymax);
+}
+\foreach \y in {\ymin,...,\ymax} {
+	\draw [very thin,gray] (\xmin,\y) -- (\xmax,\y);
+}
+\foreach \y in {\ymin,...,\ymaxA} {
+	\draw (\xmin+0.5,\y+0.5) node {P};
+}
+\foreach \y in {\ymin,...,\ymaxA} {
+	\foreach \x in {\xminA,...,\xmaxA} {
+		\draw (\x+0.5,\y+0.5) node {D};
+	}
+}
+
+\draw (1,5) -- (5,5) -- (5,6) -- (1,6) -- (1,5);
+\draw (2,5) -- (2,6);
+\draw [very thin,gray,->] (2,4) -- (1,5);
+\draw [very thin,gray,->] (3,4) -- (5,5);
+\node[align=center] at (1.5,5.5) {$CP$};
+\node[align=center] at (3.5,5.5) {$D^\prime$};
+\draw [<->] (1,6.5) -- (2,6.5); \draw [<->] (2,6.5) -- (5,6.5);
+\node[align=center] at (1.5,6.75) {$T_{cp}$};
+\node[align=center] at (3.5,6.75) {$T^\prime_s$};
+\draw [<->] (1,7.5) -- (5,7.5); \node[align=center] at (3,7.75) {$T_s$};
+\draw [very thin,gray] (1,6.25) -- (1,7.75);
+\draw [very thin,gray] (5,6.25) -- (5,7.75);
+
+\end{tikzpicture}
+
+\end{center}
+\end{figure}
 
 Pilot symbols have been inserted into each OFDM carrier at a rate of one pilot every 4 data symbols.  From \cite{freedv_low}, the SNR loss from injecting the pilot symbols is given by:
 \begin{equation}
@@ -163,9 +212,11 @@ R^\prime_b = R_b\frac{N_s}{N_s-1}
 \end{equation}
 For $N_s=5$, $R^\prime_b=2500$ symbols/s, or a OFDM QPSK bandwidth of around 1250 Hz plus some guard bandwidth.
 
-A pilot based sync system was built in PyTorch, and is used for coarse and fine timing, phase and amplitide equalisation.  Unlike classical PSK, the ML network is likely to be sensitive to amplitude variations.  Phase equalisation also allows small frequency offsets ($\pm2$ Hz) to be tracked, sufficient for tests with short samples.
+TODO: Add CP losses, discuss two candidates explored for OFDM frame.
 
-Several phase estimators were prototyped, and evaluated using BER measurements. Maintaining low loss syncronisation at low $E_b/N_0$ is challenging.  Using per-carrier phase estimation makes the system less dependant on fine timing accuracy and gives us the ability to handle multipath, but has higher loss tham algorithms that consider all carriers at the same time.  As further work a lower latent dimension $d$ and higher $E_b/N_0$, would allocate more power to pilots, and result in less carriers.
+A pilot based sync system was built in PyTorch, and is used for coarse and fine timing, phase and amplitide equalisation.  Unlike classical PSK, the ML network is likely to be sensitive to amplitude variations.  Phase equalisation also allows small frequency offsets ($\pm2$ Hz) to be handled, sufficient for tests with short samples.
+
+Several phase estimators were prototyped, and evaluated using BER measurements. Maintaining low loss syncronisation at low $E_b/N_0$ is challenging.  Using per-carrier phase estimation makes the system less dependant on fine timing accuracy and gives us the ability to handle multipath, but has higher loss than algorithms that consider all carriers at the same time.  As further work a lower latent dimension $d$ and higher $E_b/N_0$, would allocate more power to pilots, and result in less carriers.
 
 \begin{figure}[h]
 \caption{OFDM pilot based synchronisation algorithm performance, tested by measuring the BER obtained using discrete PSK symbols on an AWGN channel.  With ideal sync, the autoencoder produces intelligable speech at $E_b/N_0=-6$ dB which corresponds to BER=0.24.  Several algorithms, combined with gain and frequency offsets were simulated.}
@@ -187,15 +238,17 @@ Combined with $L_p$, we estimate a total sync loss of 3dB for this first pass of
 \end{center}
 \end{figure}
 
-TODO Figure of OFDM frame.  TODO Block diagram of OTC tests
+TODO Block diagram of OTC tests
+
+\subsection{March 2024 Results}
 
 Take aways:
 \begin{enumerate}
-\item We have combined ML vocoder, ML autoencoder and classical DSP OFDM to build a system capable of sending speech over radio channels.  It is robust to AWGN and multipath channel impairments.  Our initial simulation, VHF OTC, and HF OTA tests suggest performance highly competative with the incumbent analog SSB at the same $C/N_0$.
+\item We have combined ML vocoder, ML autoencoder and classical DSP OFDM to build a system capable of sending speech over radio channels.  It is robust to AWGN and multipath channel impairments.  Our initial simulation, VHF OTC, and HF OTA tests suggest performance competative with the analog SSB at the same $C/N_0$.
 \item The ML algorithms run at a 40ms frame rate (with some DSP at the OFDM 20ms symbol rate), resulting in modest CPU requirements.  The PyTorch simulation code runs several times faster than real time in inference mode.
 \item Simulation and initial HF OTA results show surprisingly good performance on multipath channels where the period of the fading (100's of ms) is large compared to the 40ms analysis window of the ML code.  Classical DSP would require a 1000-2000 ms interleaver (introducing a algorithmic delay of the same order) for similar robustness to fading on these channels.
 \item Unlike regular PSK, we require magnitude estimation and correction, due to the limited dynamic range of ML systems and the wide dynamic range of radio signals.
-\item The \emph{Candidate 2} OFDM frame design \cite{FreeDV-032} contains three latent vectors $z$, so introduces an algorthmic delay of 120ms, due to OFDM framing considerations.  This amount of additional delay is tolerable in a PTT radio system, but ideally should be reduced.
+\item The \emph{Candidate 2} OFDM frame design \cite{FreeDV-032} contains three latent vectors $z$, so introduces an algorthmic delay of 120ms, due to OFDM framing considerations.  This is tolerable in a PTT radio system, but ideally should be reduced.
 \item Substituting classical PSK digital symbols and measuring BER is a very useful way to test sync, and to allows us to verity $E_b/N_0$ using BER measurments during development.
 \item Much of our development effort was conscerned with the ``is this too good to be true" question; significantly more effort was put into noise calibration and testing than the actual ML.
 \end{enumerate}
